--- a/game.html
+++ b/game.html
@@ -8,7 +8,7 @@
     <script src="scripts/three.min.js"></script>
     <script src="scripts/keyboard.js"></script>
     <script src="scripts/game.js"></script>
-    <script src="./howler.js/dist/howler.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.4/howler.min.js"></script>
     <div id="pausedText" class="flashing-text">
       Game Paused! Press the Spacebar or B on the controller to resume!
     </div>
